--- a/index.html
+++ b/index.html
@@ -4,14 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>This is Jeopardy!</title>
+    <title>This is Meme Party!</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script defer src="script.js"></script>
 </head>
 <body>
-    <div class="gameName">
-            <a href="https://fontmeme.com/jeopardy-font/"><img src="https://fontmeme.com/permalink/191003/494f11023e118b59cffacfc178703d7c.png" alt="jeopardy-font" border="0"></a>
-    </div>
-    
+    <h1 class="gameName">
+        <a href="https://fontmeme.com/jeopardy-font/"><img src="https://fontmeme.com/permalink/191003/494f11023e118b59cffacfc178703d7c.png" alt="jeopardy-font" border="0"></a>
+    </h1>
+    <section class="submitName">
+        <label class="name" for="username">Enter your name:</label>
+        <input type="text" name="username" id="username">
+    </section> 
+    <section class="difficultyRange">
+        <label for="difficulty">Difficulty?</label>
+        <span id="easy">Easy</span>
+        <input type="range" name="difficulty" id="difficulty" value="2" min="1" max="3">
+        <span id="hard">Hard</span>
+    </section>
+ 
 </body>
 </html>
