--- a/gameboard.html
+++ b/gameboard.html
@@ -8,6 +8,37 @@
     <link rel="stylesheet" type="text/css" href="style2.css">
 </head>
 <body>
-    
+    <h1 class="gameName">This is Meme Party!</h1>
+    <div class="grid">
+        <div class="categories">
+            <div class="box a">Category 1</div>
+            <div class="box b">WTF</div>
+            <div class="box c">I hate this</div>
+            <div class="box d">WHY DOES NOTHING WORK</div>
+            <div class="box e"></div>
+        </div>
+        <div class="questions">
+            <div class="box f"></div>
+            <div class="box g"></div>
+            <div class="box h"></div>
+            <div class="box i"></div>
+            <div class="box j"></div>
+            <div class="box k"></div>
+            <div class="box l"></div>
+            <div class="box m"></div>
+            <div class="box n"></div>
+            <div class="box o"></div>
+            <div class="box p"></div>
+            <div class="box q"></div>
+            <div class="box r"></div>
+            <div class="box s"></div>
+            <div class="box t"></div>
+            <div class="box u"></div>
+            <div class="box v"></div>
+            <div class="box w"></div>
+            <div class="box x"></div>
+            <div class="box y"></div>
+        </div>
+    </div>
 </body>
 </html>
