--- a/gameboard.html
+++ b/gameboard.html
@@ -4,30 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>This is Meme Party!</title>
+    <title>ATL Sports Jeopardy!</title>
     <link rel="stylesheet" type="text/css" href="style2.css">
 </head>
 <body>
-    <h1 class="gameName">This is Meme Party!</h1>
+    <h1 class="gameName">ATL Sports Jeopardy!</h1>
     <div class="grid">
         <div class="categories">
-            <div class="box a">Category 1</div>
-            <div class="box b">WTF</div>
-            <div class="box c">I hate this</div>
-            <div class="box d">WHY DOES NOTHING WORK</div>
-            <div class="box e"></div>
+            <div class="box a">Atlanta Falcons</div>
+            <div class="box b">Atlanta Braves</div>
+            <div class="box c">Atlanta Hawks</div>
+            <div class="box d">Atlanta United</div>
+            <div class="box e">College Teamsvdfbsdgfbsfbsgbsgbsgbstbgsrtgbsrt</div>
         </div>
         <div class="questions">
-            <div class="box f"></div>
-            <div class="box g"></div>
-            <div class="box h"></div>
-            <div class="box i"></div>
-            <div class="box j"></div>
-            <div class="box k"></div>
-            <div class="box l"></div>
-            <div class="box m"></div>
-            <div class="box n"></div>
-            <div class="box o"></div>
+            <div class="box f">100</div>
+            <div class="box g">100</div>
+            <div class="box h">100</div>
+            <div class="box i">100</div>
+            <div class="box j">100</div>
+            <div class="box k">200</div>
+            <div class="box l">200</div>
+            <div class="box m">200</div>
+            <div class="box n">200</div>
+            <div class="box o">200</div>
             <div class="box p"></div>
             <div class="box q"></div>
             <div class="box r"></div>
