--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>This is Meme Party!</title>
+    <title>ATL Sports Jeopardy!</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script defer src="script.js"></script>
 </head>
 <body>
     <h1 class="gameName">
-        <a href="https://fontmeme.com/jeopardy-font/"><img src="https://fontmeme.com/permalink/191003/494f11023e118b59cffacfc178703d7c.png" alt="jeopardy-font" border="0"></a>
+        <img src="https://fontmeme.com/permalink/191003/494f11023e118b59cffacfc178703d7c.png" alt="jeopardy-font" border="0"></a>
     </h1>
     <section class="submitName">
         <label class="name" for="username">Enter your name:</label>
