--- a/gameboard.html
+++ b/gameboard.html
@@ -8,37 +8,17 @@
     <link rel="stylesheet" type="text/css" href="style2.css">
 </head>
 <body>
-    <h1 class="gameName">ATL Sports Jeopardy!</h1>
-    <div class="grid">
-        <div class="categories">
-            <div class="box a">Atlanta Falcons</div>
-            <div class="box b">Atlanta Braves</div>
-            <div class="box c">Atlanta Hawks</div>
-            <div class="box d">Atlanta United</div>
-            <div class="box e">College Teamsvdfbsdgfbsfbsgbsgbsgbstbgsrtgbsrt</div>
-        </div>
-        <div class="questions">
-            <div class="box f">100</div>
-            <div class="box g">100</div>
-            <div class="box h">100</div>
-            <div class="box i">100</div>
-            <div class="box j">100</div>
-            <div class="box k">200</div>
-            <div class="box l">200</div>
-            <div class="box m">200</div>
-            <div class="box n">200</div>
-            <div class="box o">200</div>
-            <div class="box p"></div>
-            <div class="box q"></div>
-            <div class="box r"></div>
-            <div class="box s"></div>
-            <div class="box t"></div>
-            <div class="box u"></div>
-            <div class="box v"></div>
-            <div class="box w"></div>
-            <div class="box x"></div>
-            <div class="box y"></div>
-        </div>
-    </div>
+    <header class="gameName">ATL Sports Jeopardy!</header>
+    <h2 class="categories">
+        <div id="Team1">Atlanta Falcons</div>
+        <div id="Team2">Atlanta Braves</div>
+        <div id="Team3">Atlanta United</div>
+        <div id="Team4">Atlanta Hawks</div>
+        <div id="Team5">College Sports</div>
+    </h2>
+        <main class="board">
+            <div id=""></div>
+        </main>
+    
 </body>
 </html>
