board coming together

--- a/gameboard.html
+++ b/gameboard.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" type="text/css" href="style2.css">
 </head>
 <body>
-    <header class="gameName">ATL Sports Jeopardy!</header>
+    <header class="gameName">
+        <img src="https://fontmeme.com/permalink/191008/245b7f88515a34726b49e4efcafa5307.png" alt="jeopardy-font" border="0">
+    </header>
     <h2 class="categories">
         <div id="Team1">Atlanta Falcons</div>
         <div id="Team2">Atlanta Braves</div>
@@ -17,7 +19,32 @@
         <div id="Team5">College Sports</div>
     </h2>
         <main class="board">
-            <div id=""></div>
+            <div id="cat11">100</div>
+            <div id="cat21">100</div>
+            <div id="cat31">100</div>
+            <div id="cat41">100</div>
+            <div id="cat51">100</div>
+            <div id="cat12">200</div>
+            <div id="cat22">200</div>
+            <div id="cat32">200</div>
+            <div id="cat42">200</div>
+            <div id="cat52">200</div>
+            <div id="cat13">300</div>
+            <div id="cat23">300</div>
+            <div id="cat33">300</div>
+            <div id="cat43">300</div>
+            <div id="cat53">300</div>
+            <div id="cat14">400</div>
+            <div id="cat24">400</div>
+            <div id="cat34">400</div>
+            <div id="cat44">400</div>
+            <div id="cat54">400</div>
+            <div id="cat15">500</div>
+            <div id="cat25">500</div>
+            <div id="cat35">500</div>
+            <div id="cat45">500</div>
+            <div id="cat55">500</div>
+
         </main>
     
 </body>
