--- a/gameboard.html
+++ b/gameboard.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header class="gameName">
+
         <img src="https://fontmeme.com/permalink/191008/245b7f88515a34726b49e4efcafa5307.png" alt="jeopardy-font" border="0">
     </header>
     <h2 class="categories">
@@ -44,8 +45,7 @@
             <div id="cat35">500</div>
             <div id="cat45">500</div>
             <div id="cat55">500</div>
-
         </main>
-    
+    <footer class="instructions">Acquire 5000 points before clearing the board and you WIN!</footer>
 </body>
 </html>
