--- a/gameboard.html
+++ b/gameboard.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ATL Sports Jeopardy!</title>
     <link rel="stylesheet" type="text/css" href="style2.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
+    <script defer src="script.js"></script>
+    
 </head>
+
 <body>
     <header class="gameName">
 
-        <img src="https://fontmeme.com/permalink/191008/245b7f88515a34726b49e4efcafa5307.png" alt="jeopardy-font" border="0">
+        <img src="https://fontmeme.com/permalink/191008/245b7f88515a34726b49e4efcafa5307.png" alt="jeopardy-font"
+            border="0">
     </header>
     <h2 class="categories">
         <div id="Team1">Atlanta Falcons</div>
@@ -19,33 +25,34 @@
         <div id="Team4">Atlanta Hawks</div>
         <div id="Team5">College Sports</div>
     </h2>
-        <main class="board">
-            <div id="cat11">100</div>
-            <div id="cat21">100</div>
-            <div id="cat31">100</div>
-            <div id="cat41">100</div>
-            <div id="cat51">100</div>
-            <div id="cat12">200</div>
-            <div id="cat22">200</div>
-            <div id="cat32">200</div>
-            <div id="cat42">200</div>
-            <div id="cat52">200</div>
-            <div id="cat13">300</div>
-            <div id="cat23">300</div>
-            <div id="cat33">300</div>
-            <div id="cat43">300</div>
-            <div id="cat53">300</div>
-            <div id="cat14">400</div>
-            <div id="cat24">400</div>
-            <div id="cat34">400</div>
-            <div id="cat44">400</div>
-            <div id="cat54">400</div>
-            <div id="cat15">500</div>
-            <div id="cat25">500</div>
-            <div id="cat35">500</div>
-            <div id="cat45">500</div>
-            <div id="cat55">500</div>
-        </main>
+    <main class="board">
+        <div id="cat11">100</div>
+        <div id="cat21">100</div>
+        <div id="cat31">100</div>
+        <div id="cat41">100</div>
+        <div id="cat51">100</div>
+        <div id="cat12">200</div>
+        <div id="cat22">200</div>
+        <div id="cat32">200</div>
+        <div id="cat42">200</div>
+        <div id="cat52">200</div>
+        <div id="cat13">300</div>
+        <div id="cat23">300</div>
+        <div id="cat33">300</div>
+        <div id="cat43">300</div>
+        <div id="cat53">300</div>
+        <div id="cat14">400</div>
+        <div id="cat24">400</div>
+        <div id="cat34">400</div>
+        <div id="cat44">400</div>
+        <div id="cat54">400</div>
+        <div id="cat15">500</div>
+        <div id="cat25">500</div>
+        <div id="cat35">500</div>
+        <div id="cat45">500</div>
+        <div id="cat55">500</div>
+    </main>
     <footer class="instructions">Acquire 5000 points before clearing the board and you WIN!</footer>
 </body>
+
 </html>
