--- a/gameboard.html
+++ b/gameboard.html
@@ -15,9 +15,8 @@
 <body>
     <header class="gameName">
 
-        <img src="https://fontmeme.com/permalink/191008/245b7f88515a34726b49e4efcafa5307.png" alt="jeopardy-font"
-            border="0">
-    </header>
+        <img src="https://fontmeme.com/permalink/191008/245b7f88515a34726b49e4efcafa5307.png" alt="jeopardy-font" 
+        border="0"></header>
     <h2 class="categories">
         <div id="Team1">Atlanta Falcons</div>
         <div id="Team2">Atlanta Braves</div>
